--- a/Assignment 4 Gitaction/.github/workflow/build-push.yml
+++ b/Assignment 4 Gitaction/.github/workflow/build-push.yml
@@ -1,9 +1,9 @@
 name: Fast API docker build push
 on:
   push:
-    branches: [ "master"]
+    branches: [ "main"]
   pull_request:
-    branches: [ "master"]
+    branches: [ "main"]
 jobs:
   build:
     runs-on: ubuntu-latest
